[package]
name = "ferris"
version = "0.1.0"
authors = ["FabioCanavarro"]
description = "A key-value store"
edition = "2018"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "^0.5" 
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
crossbeam-utils = "0.6.5"
panic-control = "0.1.4"

[dependencies]
bincode = "2.0.1"
chrono = "0.4.40"
clap = { version = "4.5.29", features = ["derive"] }
lazy_static = "1.5.0"
rayon = "1.10.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sled = "0.34.7"
slog = "2.7.0"
slog-term = "2.9.1"
tempfile = "3.0.7"
time = "0.3.41"

[[bin]]
name = "kvs-client"
path = "src/bin/kvs-client.rs"

[[bin]]
name = "kvs-server"
path = "src/bin/kvs-server.rs"

[[bin]]
name = "kvs"
path = "src/bin/kvs.rs"

[[bench]]
name = "set"
harness = false


[[bench]]
name = "rm"
harness = false


[[bench]]
name = "get"
harness = false

[[bench]]
name = "minimal"
